Fix horizontal scroll

--- a/Web Development/tinsian/css/styles.css
+++ b/Web Development/tinsian/css/styles.css
@@ -164,6 +164,7 @@ hr {
 .testimonial-div {
   align-items: center;
   padding: 5% 5%;
+  margin: 0;
 }
 
 .testimonial-img {
